[package]
name = "brilho"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.14"
walkdir = "2.3.2"
async-std = {version = "1.12.0", features = ["attributes"]}
futures = "0.3.21"
regex = "1"
lazy_static = "1.4.0"
